--- a/round0/data_analysis.ipynb
+++ b/round0/data_analysis.ipynb
@@ -933,18 +933,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "market_data."
+    "import pandas as pd\n",
+    "trades = pd.read_json(\"./data/test_round0_trades.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>buyer</th>\n",
+       "      <th>seller</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quantity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>SUBMISSION</td>\n",
+       "      <td>KELP</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>2028</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>SUBMISSION</td>\n",
+       "      <td>RAINFOREST_RESIN</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>KELP</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>2029</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>KELP</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>2029</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>RAINFOREST_RESIN</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>10004</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1107</th>\n",
+       "      <td>199400</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>RAINFOREST_RESIN</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>10004</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1108</th>\n",
+       "      <td>199500</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>RAINFOREST_RESIN</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1109</th>\n",
+       "      <td>199600</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>KELP</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1110</th>\n",
+       "      <td>199600</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>KELP</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1111</th>\n",
+       "      <td>199600</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>RAINFOREST_RESIN</td>\n",
+       "      <td>SEASHELLS</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1112 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      timestamp buyer      seller            symbol   currency  price  \\\n",
+       "0             0        SUBMISSION              KELP  SEASHELLS   2028   \n",
+       "1             0        SUBMISSION  RAINFOREST_RESIN  SEASHELLS  10002   \n",
+       "2             0                                KELP  SEASHELLS   2029   \n",
+       "3             0                                KELP  SEASHELLS   2029   \n",
+       "4             0                    RAINFOREST_RESIN  SEASHELLS  10004   \n",
+       "...         ...   ...         ...               ...        ...    ...   \n",
+       "1107     199400                    RAINFOREST_RESIN  SEASHELLS  10004   \n",
+       "1108     199500                    RAINFOREST_RESIN  SEASHELLS  10002   \n",
+       "1109     199600                                KELP  SEASHELLS   2023   \n",
+       "1110     199600                                KELP  SEASHELLS   2023   \n",
+       "1111     199600                    RAINFOREST_RESIN  SEASHELLS  10002   \n",
+       "\n",
+       "      quantity  \n",
+       "0            1  \n",
+       "1            1  \n",
+       "2           13  \n",
+       "3            1  \n",
+       "4            1  \n",
+       "...        ...  \n",
+       "1107         1  \n",
+       "1108         1  \n",
+       "1109         1  \n",
+       "1110         1  \n",
+       "1111         2  \n",
+       "\n",
+       "[1112 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trades"
    ]
   },
   {
@@ -1053,7 +1237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "kyraz-venv",
    "language": "python",
    "name": "python3"
   },
